[package]
name = "GenesisRust"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
gen_core = { version = "0.1.0", path = "../core" }
gen_network = { version = "0.1.0", path = "../network" }
rlp = { version = "0.1.0", path = "../rlp" }
db = { version = "0.1.0", path = "../db" }
gen_message = { version = "0.1.0", path = "../message" }
gen_utils = { version = "0.1.0", path = "../util" }
common = { version = "0.1.0", path = "../common" }
gen_wasm = { version = "0.1.0", path = "../wasm" }
