[package]
name = "common"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
log = "0.4"
rust-crypto = "^0.2"
rand = "^0.3"
ring = "0.12.1"
rust-base58 = "0.0.4"
untrusted = "0.5.1"
siphasher = "^0.2.2"

rlp = { version = "0.1.0", path = "../rlp" }
gen_utils = { version = "0.1.0", path = "../util" }
gen_message = { version = "0.1.0", path = "../message" }

