[package]
name = "db"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
lazy_static = "1.0.0"
rocksdb = "0.10.1"
common = { version = "0.1.0", path = "../common" }
rlp = { version = "0.1.0", path = "../rlp" }
gen_utils = { version = "0.1.0", path = "../util" }

[features]
# Mock DB
mock = []