[package]
name = "db"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
byteorder = "1.2.6"
lazy_static = "1.0.0"
rocksdb = "0.10.1"
config = "0.9"

common = { version = "0.1.0", path = "../common" }
gen_message = { version = "0.1.0", path = "../message" }
rlp = { version = "0.1.0", path = "../rlp" }
gen_utils = { version = "0.1.0", path = "../util" }

[features]
# Mock DB
mock = []