[package]
name = "gen_network"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
bytebuffer = "0.2.1"
config = "0.8"
igd = "0.7"
lazy_static = "1.0.0"
mio = "0.6"
mio-extras = "2.0.4"
slab = "0.2"
snap = "0.2"

common = { version = "0.1.0", path = "../common" }
role = { version = "0.1.0", path = "../role" }