[package]
name = "gen_network"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
bytebuffer = "0.2.1"
byteorder = "1.2.4"
chrono = "0.4.2"
config = "0.9"
futures = "0.1.21"
igd = "0.7"
lazy_static = "1.0.0"
libc = "0.2"
mio = "0.6"
mio-extras = "2.0.4"
regex = "1.0.0"
rust-base58 = "0.0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.71"
slab = "0.2"
snap = "0.2"
bit-vec = "=0.5.0"

common = { version = "0.1.0", path = "../common" }
gen_core = { version = "0.1.0", path = "../core" }
gen_message = { version = "0.1.0", path = "../message" }
gen_processor = { version = "0.1.0", path = "../processor" }
rlp = { version = "0.1.0", path = "../rlp" }
role = { version = "0.1.0", path = "../role" }
gen_utils = { version = "0.1.0", path = "../util" }