[package]
name = "gen_pool"
version = "0.1.0"
authors = ["edwardtanshuo <tanshuo198956@gmail.com>"]

[dependencies]
chrono = "0.4.2"
slab = "0.4"

common = { version = "0.1.0", path = "../common" }
gen_core = { version = "0.1.0", path = "../core" }
gen_message = { version = "0.1.0", path = "../message" }
gen_utils = { version = "0.1.0", path = "../util" }